# routes/index.js
@@ -4,10 +4,12 @@ const router = express.Router();
 const authRouter = require("../resource/app/auth/router");
 const profileRouter = require("../resource/app/v1/sys_profile/router");
 const refparamRouter = require("../resource/app/v1/sys_refparameter/router");
+const showCaseRouter = require("../resource/app/v1/project/router");
 const financeLedgerRouter = require("../resource/app/v1/sys_financial_ledger/router");
 const AuthorizeUserLogin = require("../resource/middleware/authentification");
 
 router.use("/auth", authRouter);
+router.use("/show-case", showCaseRouter);
 router.use(AuthorizeUserLogin);
 router.use("/ref-parameter", refparamRouter);
 router.use("/trx", financeLedgerRouter);
